--- a/updateservice.yml
+++ b/updateservice.yml
@@ -1,6 +1,6 @@
 ---
 - name: Hi K
-  hosts: <blahip>.compute.amazonaws.com
+  hosts: localhost
   tasks:
   - include_vars: ./newservicedetails.yml
   - name: create new service
@@ -8,6 +8,7 @@
       url: "{{url}}"
       method: "{{verb}}"
       body: "access_token={{access_token}}&name={{name}}&deployment_option={{deployment_option}}&backend_version={{backend_version}}&system_name={{system_name}}"
+      validate_certs: false
       return_content: yes
       status_code: "{{status_code}}"
     register: result
@@ -26,11 +27,13 @@
       method: "{{verb}}"
       body: "access_token={{access_token}}&name={{name}}&api_backend={{api_backend}}&endpoint={{endpoint}}&sandbox_endpoint={{sandbox}}"
       return_content: yes
+      validate_certs: false
       status_code: "{{status_code}}"
 
   - name: get default metric id ..change later to create a new metric and new method
     uri:
       url: "{{url}}/{{newserviceid}}/metrics.json"
+      validate_certs: false
       method: GET
       body: "access_token={{access_token}}"
       return_content: yes
@@ -45,6 +48,7 @@
       url: "{{url}}/{{newserviceid}}/proxy/mapping_rules.xml"
       method: POST
       body: "access_token={{access_token}}&http_method={{http_method}}&pattern={{pattern}}&delta={{delta}}&metric_id={{metricid.json.metrics[0].metric.id}}"
+      validate_certs: false
       return_content: yes
       status_code: 201
   - name: create an application plan
@@ -53,6 +57,7 @@
       method: POST
       body: "access_token={{access_token}}&name={{applicationplanname}}n&system_name={{applicationplansystemname}}"
       return_content: yes
+      validate_certs: false
       status_code: 201
       #body_format: json
     register: result
@@ -65,6 +70,7 @@
       url: "{{basedomain}}/admin/api/accounts/{{accountid}}/applications.xml"
       method: POST
       body: "access_token={{access_token}}&plan_id={{example_plan_id}}&name={{applicationname}}&description={{applicationdescription}}+cd&user_key={{user_key}}"
+      validate_certs: false
       return_content: yes
       status_code: 201
 
@@ -75,6 +81,7 @@
     uri:
       url: "{{sandbox}}/{{name}}?user_key={{user_key}}"
       method: GET
+      validate_certs: false
       return_content: yes
       status_code: 200
     register: finalresult
