--- a/updateservice.yml
+++ b/updateservice.yml
@@ -74,12 +74,12 @@
       return_content: yes
       status_code: 201
 
-  - name: sleep for 60 seconds and continue with play
-    wait_for: timeout=60
+  - name: sleep for 20 seconds and continue with play
+    wait_for: timeout=20
 
   - name: quick test
     uri:
-      url: "{{sandbox}}/{{name}}?user_key={{user_key}}"
+      url: "{{sandbox}}/{{api_get_request}}?user_key={{user_key}}"
       method: GET
       validate_certs: false
       return_content: yes
